# shelf

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
assets/: JETBRAINS_RESEARCH.md  assistant_commit_preamble.hbs  assistant_commit_prompt.hbs  assistant_review_preamble.hbs  system_commit.prompt  user_commit.prompt  user_review.prompt
assets/prompts/: assistant_commit_preamble.hbs  commit.txt  commit_completion.hbs  commit_message_completion.hbs  commit_preamble.hbs  comprehensive_review.hbs  review.txt
assets/system/: commit.prompt  commit.txt  review.prompt
assets/user/: commit.txt
src/: app.rs  commit.rs  config.rs  configure.rs  dotfile.rs  dotfs.rs  dots.rs  error.rs  git.rs  github.rs  index.rs  lib.rs  main.rs  review.rs  shell.rs  spinner.rs  storage.rs  suggestions.rs  tabs.rs  ui.rs  utils.rs
src/ai/: error.rs  git.rs  http.rs  mod.rs  prompt.rs  prompts.rs  provider.rs  providers.rs  utils.rs
src/app/: commit.rs  completion.rs  dots.rs  git.rs  mod.rs  prompt.rs  review.rs  ui.rs
src/bo/: handler.rs  mod.rs  suggest.rs  utils.rs
src/config/: mod.rs
src/df/: handler.rs  mod.rs  op.rs  suggest.rs
src/dotconf/: mod.rs  suggest.rs
src/fs/: mod.rs  suggest.rs
src/gitai/: config.rs  git.rs  mod.rs  providers.rs  utils.rs
tests/: test.rs
~/.config/shelf/: .level1rc  .level3rc
