[package]
name = "shlf"
description = "AI-based command-line tools for developers"
version = "0.9.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/ab22593k/shelf"

[lib]
name = "shelf"

[[bin]]
name = "shelf"
path = "src/main.rs"

[[bin]]
name = "ai-hook"
path = "src/bin/hook.rs"

[dependencies]
git2 = "0.19"
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
clap = { version = "4.5.23", features = ["derive", "cargo"] }
anyhow = "1.0.95"
dialoguer = "0.11.0"
shellexpand = "3.1.0"
clap_complete = "4.5.40"
colored = "2.1.0"
directories = "5.0.1"
rusqlite = "0.32.1"
chrono = "0.4.39"
walkdir = "2.5.0"
genai = "0.1.15"
async-trait = "0.1.83"
serde_json = "1.0.134"
reqwest = "0.12.11"
tempfile = "3.14.0"
indicatif = "0.17.9"
mockito = "1.6.1"

[build-dependencies]
directories = "5.0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
home = "0.5.9"
