[package]
name = "shlf"
description = "Empower Development Journey with AI-Driven Tools"
version = "0.9.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/ab22593k/shelf"

[[bin]]
name = "shelf"
path = "src/main.rs"

[dependencies]
git2 = "0.20.0"
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
clap = { version = "4.5.23", features = ["derive", "cargo"] }
anyhow = "1.0.95"
dialoguer = "0.11.0"
clap_complete = "4.5.40"
colored = "2.1.0"
directories = "5.0.1"
walkdir = "2.5.0"
serde_json = "1.0.134"
tempfile = "3.15.0"
indicatif = "0.17.9"
thiserror = "2.0.11"
which = "7.0.1"
temp-env = "0.3.6"
rig-core = "0.9.0 "
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
octocrab = "0.43.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

# Development profile optimized for fast compilation and debugging.
# These settings prioritize build speed and include debug info.
[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256

[dev-dependencies]
once_cell = "1.20.3"
