[package]
name = "shlf"
description = "Empower Development Journey with AI-Driven Tools"
version = "0.10.11"
edition = "2024"
license = "MIT"
repository = "https://github.com/ab22593k/shelf"

[[bin]]
name = "shelf"
path = "src/main.rs"

[dependencies]
git2 = "0.20.2"
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.41", features = ["derive", "cargo"] }
anyhow = "1.0.99"
dialoguer = "0.11.0"
clap_complete = "4.5.55"
colored = "3.0.0"
directories = "6.0.0"
serde_json = "1.0.141"
tempfile = "3.15.0"
indicatif = "0.17.9"
thiserror = "2.0.12"
which = "7.0.1"
temp-env = "0.3.6"
rig-core = { version = "0.17.1" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
reqwest = { version = "0.12.23" , features = ["json"] }
schemars = "0.8.22"
handlebars = "6.3.2"
walkdir = "2.5.0"
toml = "0.9.5"
glob = "0.3.3"
termimad = "0.33.0"

[dev-dependencies]
mockito = "1.6.1"

[build-dependencies]
directories = "6.0.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

# Development profile optimized for fast compilation and debugging.
# These settings prioritize build speed and include debug info.
[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256
hint-mostly-unused = true
